<resources>
    <string name="app_name">WavyTestApplication</string>
    <string name="delete">Delete</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_no">Phone Number</string>
    <string name="email">Email</string>
    <string name="no_internet">Please connect to the Internet</string>
    <string name="loading">Loading…</string>
    <string name="deleted_successfully">User Phone No Deleted Successfully</string>
</resources>
