<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.UserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/container"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civDisplayPicture"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/photo" />


                    <android.support.v4.widget.ContentLoadingProgressBar
                        android:id="@+id/clpbLoading"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="visible" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="35dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvEmail"
                        style="@style/edit_text_login_bg"
                        android:hint="@string/email" />

                    <TextView
                        android:id="@+id/tvFirstName"
                        style="@style/edit_text_login_bg"
                        android:hint="@string/first_name" />

                    <TextView
                        android:id="@+id/tvLastName"
                        style="@style/edit_text_login_bg"
                        android:hint="@string/last_name" />

                    <TextView
                        android:id="@+id/tvPhoneNo"
                        style="@style/edit_text_login_bg"
                        android:hint="@string/phone_no" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/bDelete"
                style="@style/button_login_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:text="@string/delete" />

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>